--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.pythonPath": "D:\\Anaconda\\python.exe"
+    "python.pythonPath": "D:\\Anaconda\\envs\\py2\\python.exe",
+    "files.associations": {
+        "queue": "cpp",
+        "iostream": "cpp",
+        "iosfwd": "cpp"
+    }
 }
